--- a/src/app/templates/css/style.css
+++ b/src/app/templates/css/style.css
@@ -25,9 +25,28 @@ body * {
         flex: 1;
         justify-content: center;
         align-items: center; }
-      .nav ul li a.brand {
+      .nav ul li.brand {
         text-decoration: none;
         color: black; }
+        .nav ul li.brand:hover {
+          background: white; }
+      .nav ul li ul.hover-menu {
+        top: 0;
+        height: auto;
+        position: absolute;
+        display: none;
+        flex-direction: column;
+        list-style: none;
+        margin: 4rem 0 0;
+        padding: 0; }
+        .nav ul li ul.hover-menu li {
+          padding: 0.5rem;
+          margin: 0;
+          display: flex; }
+      .nav ul li:hover {
+        background: lightgray; }
+  .nav .hover-container:hover ul {
+    display: flex; }
   .nav .left, .nav .right {
     height: 100%;
     display: flex;
@@ -35,3 +54,7 @@ body * {
     flex-direction: row; }
   .nav .right {
     justify-content: flex-end; }
+
+.content {
+  width: 70%;
+  margin: auto; }
