--- a/generators/app/templates/css/style.css
+++ b/generators/app/templates/css/style.css
@@ -1,60 +1,13 @@
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0; }
 
 body * {
-  border: 2px dotted black; }
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  height: 4rem; }
-  .nav ul {
-    height: 100%;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-    .nav ul li {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      justify-content: center;
-      margin: 0 0.5rem; }
-      .nav ul li a {
-        display: flex;
-        flex: 1;
-        justify-content: center;
-        align-items: center; }
-      .nav ul li.brand {
-        text-decoration: none;
-        color: black; }
-        .nav ul li.brand:hover {
-          background: white; }
-      .nav ul li ul.hover-menu {
-        top: 0;
-        height: auto;
-        position: absolute;
-        display: none;
-        flex-direction: column;
-        list-style: none;
-        margin: 4rem 0 0;
-        padding: 0; }
-        .nav ul li ul.hover-menu li {
-          padding: 0.5rem;
-          margin: 0;
-          display: flex; }
-      .nav ul li:hover {
-        background: lightgray; }
-  .nav .hover-container:hover ul {
-    display: flex; }
-  .nav .left, .nav .right {
-    height: 100%;
-    display: flex;
-    flex: 1;
-    flex-direction: row; }
-  .nav .right {
-    justify-content: flex-end; }
+  border: 2px dotted black;
+  background: white; }
 
 .content {
   width: 70%;
-  margin: auto; }
+  margin-left: auto;
+  margin-right: auto; }
