--- a/src/app/templates/sass/nav-left.scss
+++ b/src/app/templates/sass/nav-left.scss
@@ -1,17 +1,8 @@
-body {
-  margin: 0;
-}
-
-body * {
-  border: 2px dotted black;
-}
-
-$nav-height: 4rem;
-
 .nav {
   display: flex;
   flex-direction: row;
-  height: $nav-height;
+  height: 4rem;
+  width: 100%;
 
   ul {
     height: 100%;
@@ -49,17 +40,20 @@ $nav-height: 4rem;
         display: none;
         flex-direction: column;
         list-style: none;
-        margin: $nav-height 0 0;
+        margin: 4rem 0 0;
         padding: 0;
 
         li {
-          padding: 0.5rem;
           margin: 0;
           display: flex;
+
+          a {
+            padding: 0.5rem;
+          }
         }
       }
 
-      &:hover {
+      &:hover > * {
         background: lightgray;
       }
     }
@@ -82,19 +76,3 @@ $nav-height: 4rem;
     justify-content: flex-end;
   }
 }
-
-.content {
-  width: 70%;
-  margin: auto;
-}
-//
-//<% switch (answers.nav) {
-//  case 'Fixed':
-//  break;
-//  case 'Floating':
-//  break;
-//  case 'Left':
-//  break;
-//  case 'Right':
-//  break;
-//}
