--- a/src/app/templates/sass/style.scss
+++ b/src/app/templates/sass/style.scss
@@ -1,100 +1,16 @@
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
 }
 
 body * {
   border: 2px dotted black;
-}
-
-$nav-height: 4rem;
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  height: $nav-height;
-
-  ul {
-    height: 100%;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      justify-content: center;
-      margin: 0 0.5rem;
-
-      a {
-        display: flex;
-        flex: 1;
-        justify-content: center;
-        align-items: center;
-      }
-
-      &.brand {
-        text-decoration: none;
-        color: black;
-        &:hover {
-          background: white;
-        }
-      }
-
-      ul.hover-menu {
-        top: 0;
-        height: auto;
-        position: absolute;
-        display: none;
-        flex-direction: column;
-        list-style: none;
-        margin: $nav-height 0 0;
-        padding: 0;
-
-        li {
-          padding: 0.5rem;
-          margin: 0;
-          display: flex;
-        }
-      }
-
-      &:hover {
-        background: lightgray;
-      }
-    }
-  }
-
-  .hover-container:hover {
-    ul {
-      display: flex;
-    }
-  }
-
-  .left, .right {
-    height: 100%;
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-  }
-
-  .right {
-    justify-content: flex-end;
-  }
+  background: white;
 }
 
 .content {
   width: 70%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
-//
-//<% switch (answers.nav) {
-//  case 'Fixed':
-//  break;
-//  case 'Floating':
-//  break;
-//  case 'Left':
-//  break;
-//  case 'Right':
-//  break;
-//}
