--- a/generators/app/templates/html/wireframe.ejs
+++ b/generators/app/templates/html/wireframe.ejs
@@ -11,7 +11,7 @@
 <body>
 <% if(answers.nav !== 'None') { %>
 <nav class="nav">
-  <ul class="left">
+  <ul class="<%= answers.nav === 'Left' || answers.nav === 'Right' ? 'top' : 'left' %>">
     <li class="brand">
       <a href="">brand</a>
     </li>
@@ -24,13 +24,8 @@
     <li>
       <a href="">item 3</a>
     </li>
-  </ul>
-  <ul class="right">
-    <li>
-      <a href="">right item 4</a>
-    </li>
     <li class="hover-container">
-      <a href="">hover list item 5</a>
+      <a href="">hover list item 4</a>
       <ul class="hover-menu">
         <li>
           <a href="">hover item 1</a>
@@ -45,6 +40,28 @@
           <a href="">hover item 4</a>
         </li>
       </ul>
+    </li>
+  </ul>
+  <ul class="<%= answers.nav === 'Left' || answers.nav === 'Right' ? 'bottom' : 'right' %>">
+    <li class="hover-container">
+      <a href="">hover list item 5</a>
+      <ul class="hover-menu">
+        <li>
+          <a href="">hover item 5</a>
+        </li>
+        <li>
+          <a href="">hover item 6</a>
+        </li>
+        <li>
+          <a href="">hover item 7</a>
+        </li>
+        <li>
+          <a href="">hover item 8</a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a href="">right item 6</a>
     </li>
   </ul>
 </nav>
