--- a/src/app/templates/css/nav-left.css
+++ b/src/app/templates/css/nav-left.css
@@ -1,52 +1,70 @@
+body {
+  flex-direction: row; }
+
 .nav {
+  position: fixed;
   display: flex;
-  flex-direction: row;
-  height: 4rem;
-  width: 100%; }
+  flex-direction: column;
+  height: 100%;
+  width: 8rem; }
   .nav ul {
     height: 100%;
     display: flex;
+    flex-direction: column;
     list-style: none;
     margin: 0;
     padding: 0; }
     .nav ul li {
+      width: 100%;
       display: flex;
       align-items: center;
       flex-direction: column;
-      justify-content: center;
-      margin: 0 0.5rem; }
+      justify-content: center; }
       .nav ul li a {
+        width: 100%;
         display: flex;
         flex: 1;
         justify-content: center;
-        align-items: center; }
+        align-items: center;
+        padding: 0.5rem 0; }
       .nav ul li.brand {
         text-decoration: none;
         color: black; }
         .nav ul li.brand:hover {
           background: white; }
-      .nav ul li ul.hover-menu {
-        top: 0;
-        height: auto;
-        position: absolute;
-        display: none;
-        flex-direction: column;
-        list-style: none;
-        margin: 4rem 0 0;
-        padding: 0; }
-        .nav ul li ul.hover-menu li {
-          margin: 0;
-          display: flex; }
-          .nav ul li ul.hover-menu li a {
-            padding: 0.5rem; }
       .nav ul li:hover > * {
         background: lightgray; }
-  .nav .hover-container:hover ul {
+  .nav .hover-container {
+    position: relative; }
+  .nav .hover-container:hover .hover-menu {
     display: flex; }
-  .nav .left, .nav .right {
-    height: 100%;
+  .nav .bottom, .nav .top {
+    width: 100%;
     display: flex;
     flex: 1;
-    flex-direction: row; }
-  .nav .right {
+    flex-direction: column;
+    align-items: center; }
+    .nav .bottom .hover-menu, .nav .top .hover-menu {
+      height: auto;
+      width: 100%;
+      position: absolute;
+      display: none;
+      flex-direction: column;
+      list-style: none;
+      padding: 0; }
+      .nav .bottom .hover-menu li, .nav .top .hover-menu li {
+        width: 100%;
+        margin: 0;
+        display: flex; }
+        .nav .bottom .hover-menu li a, .nav .top .hover-menu li a {
+          padding: 0.5rem 0; }
+  .nav .bottom {
+    align-items: center;
     justify-content: flex-end; }
+    .nav .bottom .hover-menu {
+      bottom: 0; }
+  .nav .top .hover-menu {
+    top: 0; }
+
+.nav .bottom .hover-menu, .nav .top .hover-menu {
+  left: 100%; }
