--- a/generators/app/templates/sass/nav-bar/nav-vertical.scss
+++ b/generators/app/templates/sass/nav-bar/nav-vertical.scss
@@ -1,7 +1,3 @@
-body {
-  flex-direction: row;
-}
-
 .nav {
   position: fixed;
   display: flex;
@@ -98,5 +94,13 @@ body {
       top: 0;
     }
   }
+
+  .bottom.footer, .top.footer {
+    margin-bottom: 8rem;
+  }
+}
+
+.nav.squeezed {
+  height: 90vh;
 }
 
