--- a/src/app/templates/css/nav-bar/nav-left.css
+++ b/src/app/templates/css/nav-bar/nav-left.css
@@ -1,6 +1,3 @@
-body {
-  flex-direction: row; }
-
 .nav {
   position: fixed;
   display: flex;
@@ -65,3 +62,11 @@ body {
       bottom: 0; }
   .nav .top .hover-menu {
     top: 0; }
+  .nav .bottom.footer, .nav .top.footer {
+    margin-bottom: 8rem; }
+
+.nav.squeezed {
+  height: 90vh; }
+
+.nav .bottom .hover-menu, .nav .top .hover-menu {
+  left: 100%; }
