--- a/src/app/templates/css/style.css
+++ b/src/app/templates/css/style.css
@@ -10,4 +10,6 @@ body * {
 .content {
   width: 70%;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  display: flex;
+  flex-direction: column; }
