--- a/src/app/templates/html/wireframe.ejs
+++ b/src/app/templates/html/wireframe.ejs
@@ -74,8 +74,8 @@
   <h2> Your answers:</h2>
   <h3>
     <ul>
-      <li>appName: <%= answers.appName %></li>
-      <li>nav: <%= answers.nav %></li>
+      <li>Name: <%= answers.appName %></li>
+      <li>Nav: <%= answers.nav %></li>
       <li>footer: <%= answers.footer %></li>
       <li>Sass: <%= answers.sass %></li>
     </ul>
