--- a/generators/app/templates/css/nav-bar/nav-left.css
+++ b/generators/app/templates/css/nav-bar/nav-left.css
@@ -24,13 +24,13 @@
         justify-content: center;
         align-items: center;
         padding: 0.5rem 0; }
-      .nav ul li.brand {
-        text-decoration: none;
-        color: black; }
-        .nav ul li.brand:hover {
-          background: white; }
-      .nav ul li:hover > * {
-        background: lightgray; }
+    .nav ul li > *:hover {
+      background: lightgray; }
+    .nav ul li.brand > * {
+      text-decoration: none;
+      color: black; }
+      .nav ul li.brand > *:hover {
+        background: white; }
   .nav .hover-container {
     position: relative; }
   .nav .hover-container:hover .hover-menu {
