--- a/src/app/templates/css/style.css
+++ b/src/app/templates/css/style.css
@@ -13,3 +13,7 @@ body * {
   margin-right: auto;
   display: flex;
   flex-direction: column; }
+
+hr {
+  border: 1px inset black;
+  width: 100%; }
