--- a/generators/app/templates/css/footer/footer-floating.css
+++ b/generators/app/templates/css/footer/footer-floating.css
@@ -7,7 +7,10 @@
     align-items: center; }
   .footer .left > *, .footer .right > * {
     margin: 0 0.5rem; }
+  .footer .left {
+    margin-left: 1rem; }
   .footer .right {
+    margin-right: 1rem;
     justify-content: flex-end; }
 
 .stacked-text p {
