--- a/generators/app/templates/sass/footer/footer.scss
+++ b/generators/app/templates/sass/footer/footer.scss
@@ -12,7 +12,11 @@
     margin: 0 0.5rem;
   }
 
+  .left {
+    margin-left: 1rem;
+  }
   .right {
+    margin-right: 1rem;
     justify-content: flex-end;
   }
 }
