--- a/src/app/templates/sass/footer/footer.scss
+++ b/src/app/templates/sass/footer/footer.scss
@@ -9,10 +9,14 @@
   }
 
   .left > *, .right > * {
-    margin: 0 0.5rem;
+    margin: 0 1rem;
   }
 
+  .left {
+    margin-left: 1rem;
+  }
   .right {
+    margin-right: 1rem;
     justify-content: flex-end;
   }
 }
